<resources>
    <string name="app_name">firebasesem9</string>
    <string name="valbtlogin">LOGIN</string>
    <string name="valetemaillogin">Enter email</string>
    <string name="valetpassworllogin">Enter password</string>
    <string name="valetfullname">Enter fullname</string>
    <string name="valetcountry">Enter country</string>
    <string name="valetemail">Enter email</string>
    <string name="valetpassword">Enter password</string>
    <string name="valbtsaveregister">SAVE</string>
    <string name="valbtregister">REGISTER</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtitlecustomer">Registar cliente</string>
    <string name="valbtsavecustomer">SAVE</string>
</resources>